--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
     id "kotlin-kapt"
     id "dagger.hilt.android.plugin"
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -42,6 +43,8 @@ android {
 }
 
 dependencies {
+    implementation("io.coil-kt:coil-compose:2.2.2")
+//    implementation("io.coil-kt:coil:1.4.0")
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "com.google.android.material:material:1.11.0"
@@ -59,6 +62,9 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     implementation "com.google.dagger:hilt-android:2.42"
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.11.1'
+    implementation 'com.google.firebase:firebase-database:20.3.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
     kapt "com.google.dagger:hilt-android-compiler:2.42"
 
     testImplementation "junit:junit:4.13.2"
